--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookshelf</title>
+    <script>
+        function Book(title, author, pages, read) {
+        this.title = title;
+        this.author = author;
+        this.pages = pages;
+        this.read = read;
+        this.info = function() {
+            return `Title: ${title}, Author: ${author}, Pages: ${pages}, Read: ${read}`;
+        }
+        }
+
+    const theHobbit = new Book("The Hobbit", "J.R.R. Tolkein", "295", "No")
+
+    console.log(theHobbit.info());
+    </script>
     <style>
         body {
             background-image: url(background.jpg);
